--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,6 @@
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
   background-color: oklch(14.5% 0 0);
   font-family: "Josefin Sans", sans-serif;
   font-optical-sizing: auto;
@@ -39,6 +34,10 @@ h1 {
   /* font-family: "Dancing Script", cursive; */
 }
 
+.menu_icon {
+  padding-top: 12px !important;
+}
+
 .activelink{
   position: relative;
   padding-bottom: 8px;
@@ -55,24 +54,14 @@ h1 {
   border-radius: 3px;
 }
 
-
 button:focus,
 button:focus-visible {
   outline: none;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
 
 /* Hero Section css */
-.buttons button, a, i{
+.buttons button, .buttons a, .buttons i{
   transition: all 0.3s ease-in-out;
 }
 .buttons button:hover{
@@ -85,8 +74,9 @@ button:focus-visible {
 }
 
 @media (max-width: 640px) {
-  .hero{
-    padding-top: 25px;
+  .navbar{
+    padding-top: 30px;
+    padding-bottom: 40px;
   }
   .hero .two_sides{
     width: 100%;
@@ -96,15 +86,117 @@ button:focus-visible {
     width: 100%;
     text-align: center;
   }
-  .notice{
+  .side_one h3{
+    font-size: 25px;
+  }
+  .side_one h4{
+    font-size: 55px;
+  }
+  .side_one p{
+    font-size: 25px;
+  }
+  .side_one .buttons{
     display: block;
     width: 100%;
   }
-  .notice div{
-    width: fit-content;
-    margin: auto;
+  .side_one .buttons button{
+    width: 100%;
     margin-bottom: 20px;
+    padding-bottom: 15px;
+    padding-top: 15px;
+  }
+  .notice{
+    display: none;
   }
 }
 
+@media (max-width: 1024px) {
+  .navbar{
+    padding-top: 30px;
+  }
+  .hero{
+    font-size: 20px;
+    padding-top: 40px;
+  }
+  .hero .two_sides{
+    width: 100%;
+    display: block;
+  }
+  .two_sides .side_one , .two_sides .side_two{
+    width: 100%;
+    text-align: center;
+  }
+  .side_one .buttons{
+    width: fit-content;
+    margin: auto;
+  }
+  /* .side_one .buttons button{
+    width: 100%;
+    margin-bottom: 20px;
+    padding-bottom: 15px;
+    padding-top: 15px;
+  } */
+}
+
 /* Hero Section css */
+
+
+/* About section css */
+
+.about_title h2{
+  position: relative;
+  padding: 12px;
+}
+
+.about_title h2::after{
+  content: "";
+  width: 50%;
+  position: absolute;
+  bottom: 0;
+  left: 25%;
+  height: 4px;
+  background-color: oklch(64.6% 0.222 41.116);
+  border-radius: 5px;
+}
+
+.about_container .content button{
+  padding: 12px 60px;
+  font-size: 24px;
+  margin-top: 20px;
+  margin-right: 10px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.about_container .content h3{
+  margin-bottom: 20px;
+}
+
+/* About section css */
+
+
+.card, .navbar a{
+  transition : all 0.5s ease-in-out
+}
+
+@keyframes slideUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-slideUp {
+  animation: slideUp 0.4s ease-out forwards;
+  opacity: 0;
+}
+
+/* journey */
+
+.journey{
+  position: relative;
+}
