--- a/src/index.css
+++ b/src/index.css
@@ -190,3 +190,20 @@ button:focus-visible {
 .journey{
   position: relative;
 }
+
+.scroll_top{
+  background-color: #f54900 !important;
+  width: auto !important;
+  height: auto !important;
+  padding: 20px 16px;
+}
+
+@media (max-width: 640px) {
+    .scroll_top{
+      padding: 8px 5px;
+    }
+    .scroll_top svg{
+      width: 18px !important;
+      height: 18px !important;
+    }
+}
